# llms4edu

./: .gitignore  README.md  main.py  pyproject.toml
app/: data.py  runner.py  server.py
app/static/: app.js  style.css
app/templates/: analysis.html  home.html  name.html  preprocess.html  syllabi.html  syllabus.html  transcript.html  transcripts.html
data/ocw/: repos.py
data/ocw/ocw_subset/: manifest.csv
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/: main.scss
scripts/: loadtest.py
slides/: beamerthemescale.sty  main.tex  manifest.md
slides/scale-beamer-template/: README.md  beamerthemescale.sty  main.tex  references.bib
