[project]
name = "llms4edu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "inference",
    "markdown>=3.10.2",
    "requests>=2.34.2",
]

[tool.uv.sources]
inference = { path = "../inference", editable = true }
